<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/heavy">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:text="@string/name"
        android:textColor="@color/gray"
        android:textSize="@dimen/middle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:textColor="@color/black"
        android:textSize="@dimen/middle"
        android:textStyle="bold"
        tools:text="Rick Morty" />

    <TextView
        android:id="@+id/tv_genderUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:text="@string/gender"
        android:textColor="@color/gray"
        android:textSize="@dimen/middle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:textColor="@color/black"
        android:textSize="@dimen/middle"
        android:textStyle="bold"
        tools:text="Male" />

    <TextView
        android:id="@+id/tv_statusUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:text="@string/status"
        android:textColor="@color/gray"
        android:textSize="@dimen/middle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:textColor="@color/black"
        android:textSize="@dimen/middle"
        android:textStyle="bold"
        tools:text="Alive" />

    <TextView
        android:id="@+id/tv_typeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:text="@string/species"
        android:textColor="@color/gray"
        android:textSize="@dimen/middle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:textColor="@color/black"
        android:textSize="@dimen/middle"
        android:textStyle="bold"
        tools:text="Human" />

    <TextView
        android:id="@+id/tv_locationUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:text="@string/location"
        android:textColor="@color/gray"
        android:textSize="@dimen/middle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topLine"
        android:textColor="@color/black"
        android:textSize="@dimen/middle"
        android:textStyle="bold"
        tools:text="Citadel of Ricks" />

</LinearLayout>